--- a/index.html
+++ b/index.html
@@ -2,42 +2,47 @@
 <html lang="fr">
 
 <head>
-    <title>Pokemon</title>
+    <title>Ni_oui_ni_Oui_ni_ouais_ni_ouaip_ni_vi_ni_ok_ni_oki_ni_non_ni_Non_ni_nan_ni_nop_ni_nein_ni_no_ni_négatif</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <!-- Font-google -->
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
     <!-- Bootstrap CSS v5.2.0-beta1 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-
+    <!-- CSS additionnel     -->
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div id="wrapper">
-        <h1 class="bg-warning text-center display-4 mx-auto">Pokemon</h1>
+        <h1 class="bg-secondary text-center display-4 mx-auto">Ni oui, ni non !</h1>
         <div class="container bg-light mt-3">
             <div class="row">
                 <div class="col-md-6 col-sm-12">
-                    <p>Écrivez un programme qui affiche dans la console tous les nombres entre 1 et 100 avec les
-                        exceptions
-                        suivantes :</p>
+                    <p>Ecrivez un programme ni_oui_ni_non.js qui fait jouer l'utilisateur au "ni oui, ni non" : il entre
+                        un texte jusqu'à saisir "oui" ou "non", ce qui déclenche la fin du jeu et affiche dans la page
+                        la phrase "Vous avez perdu !"</p>
                     <ul>
-                        <li>Il affiche "Poke" à la place du nombre si celui-ci est divisible par 3.</li>
-                        <li>Il affiche "Mon" à la place du nombre si celui-ci est divisible par 5 et non par 3.</li>
-                        <li>Ensuite, améliorez votre programme pour qu'il affiche "PokeMon" à la place des nombres
-                            divisibles à la
-                            fois par 3 et par 5.</li>
+                        <li>Pensez à initialiser la variable qui contiendra le prompt de votre visiteur</li>
+                        <li>Il faut faire une boucle while</li>
+                        <li>Pensez à initialiser la variable de départ pour entrer dans la boucle</li>
                         <li>Mettez du css personnalisé pour améliorer le style de votre page</li>
-
                     </ul>
                 </div>
             </div>
         </div>
+    </div>
 
+    <!-- Reponse -->
+
+    <div class="col-sm-12 text-center">
+        <h2 class="alert alert-success p-0"></h2>
     </div>
     <!-- JS -->
-    <script src="pokemon.js"></script>
+    <script src="ni_oui_ni_non.js"></script>
     <!-- Bootstrap JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
         integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
